# aoc2024

./: Cargo.toml  README.md  aoc2024.code-workspace
src/: lib.rs  main.rs
src/solutions/: day_01.rs  day_02.rs  day_03.rs  day_04.rs  day_05.rs  mod.rs
