[package]
authors = ["Fabio Pungg <fabiopungg@gmail.com>"]
edition = "2021"
name = "aoc2024"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
camino = "1.1.6"
clap = {version = "4.4.10", features = ["derive"]}
color-eyre = "0.6.2"
derive_more = "1.0.0"
itertools = "0.13.0"
nom = "7.1.3"
pathfinding = "4.4.0"
rayon = "1.8.0"
regex = "1.10.2"
thiserror = "2.0.3"

[lib]
bench = false

[dev-dependencies]
assert_ok = "1.0.2"
test-case = "3.3.1"
